Made group lessons (Classes) responsive

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Testimonials are based on https://eatsleepwander.com/gym-review-example/ -->
     <div class="container testemonials-container">
         <section id="testimonials" class="text-center">
-            <h3 class="font-weight-bold">Testimonials</h3>
+            <h2 class="font-weight-bold">Testimonials</h2>
             <div class="row text-center">
                 <div class="col-md-4">
                     <div class="testimonial">
@@ -216,11 +216,9 @@
                                 class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
                         <hr class="hr-testimonial">
                         <p class="">
-                            I absolutely love this place! The staff is amazing and offer tons of support and
-                            encouragement on
-                            your fitness journey. The workouts are tough but rewarding and produce amazing results
-                            quickly if you are ready to commit to it! I’ve been going to ze Gym for about 3 months now
-                            and I have achieved better
+                            I absolutely love this place! The staff is amazing and offer tons of support.
+                            The workouts are tough but rewarding and produce amazing results if you're ready to
+                            commit! I’ve been going to ze Gym for about 3 months now and I have achieved better
                             results in that time than I have in years at other gyms.</p>
                     </div>
                 </div>
@@ -236,11 +234,11 @@
                 <h3 class="font-weight-bold">Classes</h3>
             </div>
             <div class="row">
-                <div class="col class-title">
-                    <h4>HIIT</h4>
+                <div class="col-6 col-md-4 class-title">
+                    <h4 class="font-weight-bold dark-grey-text mt-4">HIIT</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
-                        <p>Every day we make great efforts at juggling demands of different sorts. High
+                        <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of different sorts. High
                             intensity interval training, or HIIT Workout, is a great way to fit in a
                             rigorous workout in a short time span and make it fun to boot! It can
                             deliver as good or better fitness benefits than steady state cardio (SSC), 
@@ -248,22 +246,22 @@
                             best fitness value for your time.</p>
                     </div>
                 </div>
-                <div class="col class-title">
-                    <h4>Bodypump</h4>
+                <div class="col-6 col-md-4 class-title">
+                    <h4 class="font-weight-bold dark-grey-text mt-4">Bodypump</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
-                        <p>BODYPUMP™ is a barbell workout for anyone looking to get lean, toned and fit
+                        <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get lean, toned and fit
                             – fast. Using light to moderate weights with lots of repetition, BODYPUMP is a 
                             total body workout that burns up to 540 calories*. With scientifically proven 
                             moves and great, pumping music, it’s a fantastic and motivating class for 
                             instructors to teach. Are you ready to feel the burn?</p>
                     </div>
                 </div>
-                <div class="col class-title">
-                    <h4>Boxing</h4>
+                <div class="col-6 col-md-4 class-title">
+                    <h4 class="font-weight-bold dark-grey-text mt-4">Boxing</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
-                        <p>Boxing is a cardio workout in which multiple elements of training are
+                        <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of training are
                             combined. During this lesson, we will make use of punching bags and boxing 
                             gloves. Multiple hit and punch combinations will be treated during this lesson. 
                             During this group lesson, you will work individually or in pairs to train your 
@@ -271,11 +269,11 @@
                             calories?</p>
                     </div>
                 </div>
-                <div class="col class-title">
-                    <h4>Spinning</h4>
+                <div class="col-6 col-md-4 class-title">
+                    <h4 class="font-weight-bold dark-grey-text mt-4">Spinning</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
-                        <p>A challenging, stimulating and fun training: spinning is all of this and
+                        <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is all of this and
                             more. You are challenged to extend your boundaries, to go much further than 
                             you thought you could. It is a training for everyone, as you can determine
                             the intensity by adjusting the resistance of your bike. Musicwill guide you 
@@ -283,11 +281,11 @@
                             bring a towel and a water bottle.</p>
                     </div>
                 </div>
-                <div class="col class-title">
-                    <h4>Pilates</h4>
+                <div class="col-6 col-md-4 class-title">
+                    <h4 class="font-weight-bold dark-grey-text mt-4">Pilates</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.bodyvita.nl/en/  -->
-                        <p>Pilates is an innovative and safe way of movement and provides exercises for
+                        <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and provides exercises for
                             body and mind. Pilates was born from the movement principles of Joseph Pilates
                             and can transform the way your body looks and functions. The goal of
                             Pilates is not only to move but also to strengthen the connection between body
@@ -295,11 +293,11 @@
                             mentally stronger.</p>
                     </div>
                 </div>
-                <div class="col class-title">
-                    <h4>Yoga</h4>
+                <div class="col-6 col-md-4 class-title">
+                    <h4 class="font-weight-bold dark-grey-text mt-4">Yoga</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
-                        <p>It’s time to roll out your yoga mat and discover the combination of physical and
+                        <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the combination of physical and
                             mental exercises that for thousands of years have hooked yoga practitioners around 
                             the globe. Whether you are young or old, overweight or fit, yoga has the power to 
                             calm the mind and strengthen the body. Don’t be intimidated by yoga terminology, 
